# matrix-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  s21_arithmetic.c  s21_control.c  s21_converter.c  s21_matrix.c  s21_matrix.h
tests/: s21_calc_complements_test.c  s21_determinant_test.c  s21_inverse_test.c  s21_matrix_gather_test.c  s21_sub_test.c  s21_test_matrix.h
unit_tests/: s21_determinant_test.c  s21_matrix_gather.c  s21_test_matrix.h
